tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoQuestLine__TriggerNightvisi-5bnuPY-USBW37JbkO5VzOw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10345973500008035131,
  "prerequisites": [
    753,
    838,
    775
  ],
  "properties": {
    "auto_claim": true,
    "desc": "Skip is here for those who get the goggles in a lootbag",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": true,
    "locked_progress": 0,
    "name": "Trigger: Nightvision Goggle Skip",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    753,
    838,
    775
  ],
  "rewards": [],
  "tasks": []
}
